# gateway-system

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  smoke.yml
cpp-gateway/: .gitignore  CMakeLists.txt  Dockerfile  README.md
cpp-gateway/docs/: architecture.md  connection_lifecycle.md  error_handling.md  performance.md  protocol.md  roadmap.md
cpp-gateway/include/business/: Dispatcher.hpp  Handlers.hpp  LogStorage.hpp  StatsManager.hpp
cpp-gateway/include/common/: Logger.hpp
cpp-gateway/include/concurrent/: BlockQueue.hpp
cpp-gateway/include/control/: ControlPlaneClient.hpp
cpp-gateway/include/net/: Connection.hpp  SocketUtil.hpp  TcpServer.hpp
cpp-gateway/include/protocol/: MessageType.hpp  ProtocolCodec.hpp  Request.hpp  Response.hpp
cpp-gateway/scripts/: benchmark.py  test_half_packet.py  test_invalid_length.py  test_slow_client.py  test_sticky_packet.py
cpp-gateway/src/: main.cpp
cpp-gateway/src/business/: Dispatcher.cpp  Handlers.cpp  LogStorage.cpp  StatsManager.cpp
cpp-gateway/src/control/: ControlPlaneClient.cpp
cpp-gateway/src/net/: TcpServer.cpp
cpp-gateway/src/protocol/: ProtocolCodec.cpp
docs/: architecture.md  benchmark.md  failure_cases.md  interview_notes.md  protocol.md  vibe_coding.md
go-control-plane/: Dockerfile  README.md  config.go  go.mod  handlers.go  liveness.go  main.go  main_test.go  memory_store.go  redis_store.go  store.go  types.go
scripts/: benchmark_tcp.py  smoke_test.sh  tcp_protocol_test.py
